[package]
name = "live-helper-service"
version = "0.1.0"
authors = ["Mojtaba Zarezadeh <mojtab23@aol.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
percent-encoding = "2.1"
structopt = "0.3"
str-macro = "1.0"
